# language-swift2-quote

./: .ghci  LICENSE  README.md  language-swift-quote.cabal  test.out
Language/Swift/Quote/: Parser.hs  Pretty.hs  Syntax.hs
tests/golden/: accessingProperties.swift  accessingProperties.swift.golden  array1.swift  arrayType1.swift  asdf  assignment.swift  attribute1.swift  attribute2.swift.golden  attribute3.swift.golden  break.swift  break.swift.golden  comparisonOperators.swift  comparisonOperators.swift.golden  compassPoint.swift  compoundAssignment.swift.golden  customOp.swift  customOp.swift.golden  decls2.swift  decls3.swift  decls3.swift.golden  decls5unicode.swift  decls5unicode.swift.golden  defer.swift  defer.swift.golden  deinit1.swift  deinit2.swift  deinit2.swift.golden  dict1.swift  dict1.swift.golden  dictionaryType1.swift.golden  do1.swift  do1.swift.golden  do2.swift.golden  enum1.swift  enum1.swift.golden  enum2.swift  example1.swift  example1.swift.golden  example2.swift.golden  extension1.swift  (+92 more)
tests/unit/: Main.hs
