name:                language-swift-quote
version:             0.1.0.0
synopsis:            QuasiQuotation support for Swift in Template Haskell
description:         Please see README.md
homepage:            http://github.com/steshaw/language-swift-quote#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Shaw, Manuel M T Chakravarty, Maxwell Swadling
maintainer:          steven@steshaw.org
copyright:           (c) 2015, Steven Shaw
                     (c) 2014, Manuel M T Chakravarty
                     (c) 2014, Maxwell Swadling
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Swift.Quote,
                       Language.Swift.Quote.Parser,
                       Language.Swift.Quote.Pretty,
                       Language.Swift.Quote.Syntax
  build-depends:       base >= 4.7 && < 5.0
                     , parsec
                     , text
                     , mtl
                     , mainland-pretty
  default-language:    Haskell2010

test-suite unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/unit
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5.0
                     , language-swift-quote
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/steshaw/language-swift-quote.git
