name:                language-swift-quote
version:             0.1.0.0
synopsis:            QuasiQuotation support for Swift in Template Haskell
description:         Please see README.md
homepage:            http://github.com/steshaw/language-swift-quote#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Shaw, Manuel M T Chakravarty, Maxwell Swadling
maintainer:          steven@steshaw.org
copyright:           (c) 2015, Steven Shaw
                     (c) 2014, Manuel M T Chakravarty
                     (c) 2014, Maxwell Swadling
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Swift.Quote,
                       Language.Swift.Quote.Parser,
                       Language.Swift.Quote.Pretty,
                       Language.Swift.Quote.Syntax
  build-depends:       base >= 4.7 && < 5.0
                     , mainland-pretty
                     , mtl
                     , parsec
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/unit
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5.0
                     , language-swift-quote
                     , mainland-pretty
                     , tasty
                     , tasty-hunit
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: git://github.com/steshaw/language-swift-quote.git
